Fixed issue with mobile menu overlapping main content

--- a/client/src/css/custom.css
+++ b/client/src/css/custom.css
@@ -71,13 +71,11 @@ h1,
     background-color: #C8E8FC;
 }
 
-@media only screen and (max-width: 766px) {
-    .collapsing,
-    .in {
+.collapsing,
+.in {
         width: 100%;
         background-color: #ffffff;
     }
-}
 
 .footer-distributed {
     background-color: #292c2f;
